<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="22dp"
    android:paddingTop="17dp"
    android:paddingRight="17dp"
    android:paddingBottom="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_dialog1_tip1"
        android:textColor="@color/colorText_33"
        android:textSize="@dimen/textSize_16" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.3dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@drawable/chbox_olineqa_dialog"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/online_dialog1_t1"
            android:textColor="@drawable/textcolor_onlineqa_dialog"
            android:textSize="13.1sp" />

        <RadioButton
            android:id="@+id/tBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@drawable/chbox_olineqa_dialog"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/online_dialog1_t2"
            android:textColor="@drawable/textcolor_onlineqa_dialog"
            android:textSize="13.1sp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.7dp"
        android:text="@string/online_dialog1_tip2"
        android:textColor="@color/colorText_33"
        android:textSize="@dimen/textSize_16" />

    <com.asking91.app.ui.widget.AskRadioGroup
        android:id="@+id/askRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:layout_marginTop="16.7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tBtn11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:background="@drawable/chbox_olineqa_dialog"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/online_dialog1_t3"
                android:textColor="@drawable/textcolor_onlineqa_dialog"
                android:textSize="13.1sp" />

            <RadioButton
                android:id="@+id/tBtn12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:background="@drawable/chbox_olineqa_dialog"
                android:button="@null"
                android:gravity="center"
                android:text="@string/online_dialog1_t4"
                android:textColor="@drawable/textcolor_onlineqa_dialog"
                android:textSize="13.1sp" />

            <RadioButton
                android:id="@+id/tBtn13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:background="@drawable/chbox_olineqa_dialog"
                android:button="@null"
                android:gravity="center"
                android:text="@string/online_dialog1_t5"
                android:textColor="@drawable/textcolor_onlineqa_dialog"
                android:textSize="13.1sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12.3dp">

            <RadioButton
                android:id="@+id/tBtn21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:background="@drawable/chbox_olineqa_dialog"
                android:button="@null"
                android:gravity="center"
                android:text="@string/online_dialog1_t6"
                android:textColor="@drawable/textcolor_onlineqa_dialog"
                android:textSize="13.1sp" />

            <RadioButton
                android:id="@+id/tBtn22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:background="@drawable/chbox_olineqa_dialog"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/online_dialog1_t7"
                android:textColor="@drawable/textcolor_onlineqa_dialog"
                android:textSize="13.1sp" />

            <RadioButton
                android:id="@+id/tBtn23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:background="@drawable/chbox_olineqa_dialog"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/online_dialog1_t8"
                android:textColor="@drawable/textcolor_onlineqa_dialog"
                android:textSize="13.1sp" />
        </LinearLayout>
    </com.asking91.app.ui.widget.AskRadioGroup>
    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="42.7dp"
        android:textColor="@color/text_white"
        android:text="@string/online_dialog1_ok"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="21.3dp"
        android:background="@drawable/common_btn_normal"/>
</LinearLayout>