<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="22dp"
    android:paddingTop="17dp"
    android:paddingRight="22dp"
    android:paddingBottom="20dp">
    <ImageView
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginRight="@dimen/space_12"
        android:visibility="gone"
        android:src="@mipmap/oto_ask_dialog_dimiss"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_16"
        android:gravity="center_horizontal"
        android:textColor="@color/colorText_88"
        android:text="@string/oto_waiting_tip1"/>
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_14"
        android:textColor="@color/colorText_88"
        android:text="@string/oto_waiting_tip2"/>
    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_14"
        android:textColor="@color/oto_ask_tip"
        android:text="@string/oto_waiting_tip3"/>
    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_14"
        android:textColor="@color/colorText_88"
        android:text="@string/oto_waiting_tip4"/>
    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="44dp"
        android:background="@drawable/common_btn_bg"
        android:layout_marginTop="24dp"
        android:textColor="@color/text_white"
        android:textSize="@dimen/space_16"
        android:text="知道了"
        android:layout_marginLeft="44dp"/>
</LinearLayout>