<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:background="@color/white"
android:padding="@dimen/space_10"
android:layout_alignParentBottom="true"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/pay_true_price"
        android:textSize="@dimen/textSize_16"
        android:textColor="@color/colorText_88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/pay_money"
        android:text="1"
        android:layout_marginRight="@dimen/space_20"
        android:layout_alignParentRight="true"
        android:textColor="@color/coral"
        android:textSize="@dimen/textSize_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_alignParentRight="true"
        android:text="@string/pay_money_type"
        android:textColor="@color/coral"
        android:textSize="@dimen/textSize_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
<Button
    android:id="@+id/pay_btn"
    android:textSize="@dimen/textSize_16"
    android:text="@string/pay_now"
    android:textColor="@color/white"
    android:layout_marginTop="@dimen/space_20"
    android:layout_gravity="center"
    android:background="@mipmap/pay_btn_bg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
</LinearLayout>